Updated openapi schema
